[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[project]
name = "kv-store"
version = "0.1.0"
description = ""
requires-python = "<3.15,>=3.10"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "open-autonomy==0.21.18",
    "requests<2.33.0,>=2.28.1",
    "py-multibase==1.0.3",
    "py-multicodec==0.2.1",
    "py-eth-sig-utils",
    "grpcio==1.78.0",
    "asn1crypto<1.5.0,>=1.4.0",
    "open-aea-ledger-ethereum==2.2.1",
    "open-aea-ledger-cosmos==2.2.1",
    "protobuf<6,>=5",
    "hypothesis==6.21.6",
    "open-aea-test-autonomy==0.21.18",
    "open-aea-cli-ipfs==2.2.1",
    "open-aea-helpers==0.21.18",
    "ecdsa>=0.15",
    "eth_typing",
    "packaging",
    "pytz==2022.2.1",
    "typing_extensions>=3.10.0.2",
    "websocket_client<1,>=0.32.0",
    "toml==0.10.2",
    "pytest==8.4.2",
    "pytest-asyncio",
    "jsonschema<5.0.0,>=4.23.0",
    "openapi-core==0.22.0",
    "openapi-spec-validator<0.8.0,>=0.7.0",
    "pyinstaller==6.19.0",
    "pycryptodome==3.20.0",
    "google-generativeai==0.8.2",
    "w3multicall>=0.3.1",
    "multiaddr==0.0.9",
    "httpx<1,>=0.23.0",
    "filelock>=3.20.1",
    "certifi",
    "hexbytes",
    "peewee==3.17.5",
    "pip>=24.0",
]

[project.urls]
Repository = "https://github.com/valory-xyz/kv-store"

[dependency-groups]
dev = [
    "tomte[cli, tests]>=0.6.5",
]

[tool.uv]
default-groups = "all"
prerelease = "allow"

[tool.uv.build-backend]
module-name = ["packages"]
module-root = ""
namespace = true
