[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[project]
name = "kv-store"
version = "0.1.0"
description = ""
requires-python = "<3.15,>=3.10"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    # OA / open-aea / plugins — pinned exactly (framework contract).
    "open-autonomy[all]==0.21.19",
    "open-aea-ledger-ethereum==2.2.1",
    "open-aea-ledger-cosmos==2.2.1",
    "open-aea-test-autonomy==0.21.19",
    "open-aea-cli-ipfs==2.2.1",
    "open-aea-helpers==0.21.19",
    # Framework/lib deps — ranges (kv-store is a component library, not an app).
    "requests>=2.32.5,<3",
    # grpcio: pinned exactly — tight ABI/wheel coupling with protobuf; upstream
    # open-aea / open-autonomy also exact-pin this across the Valory fleet.
    "grpcio==1.78.0",
    "asn1crypto<1.5.0,>=1.4.0",
    "protobuf<6,>=5",
    "hypothesis>=6,<7",
    "ecdsa>=0.15",
    "pytest>=8,<10",
    "pytest-asyncio>=1.3,<2",
    # kv-store-specific runtime dep (the only actual import in packages/).
    "peewee>=3.17,<4",
    "pip>=24.0",
]

[project.urls]
Repository = "https://github.com/valory-xyz/kv-store"

[dependency-groups]
dev = [
    "tomte[cli, tests]==0.6.5",
]

[tool.uv]
default-groups = "all"
prerelease = "allow"

[tool.uv.build-backend]
module-name = ["packages"]
module-root = ""
namespace = true
