[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[project]
name = "kv-store"
version = "0.1.0"
description = ""
requires-python = "<3.15,>=3.10"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    # OA / open-aea / plugins — pinned exactly (framework contract).
    "open-autonomy[all]==0.21.22",
    "open-aea-ledger-ethereum==2.2.6",
    "open-aea-ledger-cosmos==2.2.6",
    "open-aea-test-autonomy==0.21.22",
    "open-aea-cli-ipfs==2.2.6",
    "open-aea-helpers==0.21.22",
    # Framework/lib deps — ranges (kv-store is a component library, not an app).
    "requests>=2.32.5,<3",
    # grpcio: pinned exactly — tight ABI/wheel coupling with protobuf; upstream
    # open-aea / open-autonomy also exact-pin this across the Valory fleet.
    "grpcio==1.78.0",
    "asn1crypto<1.5.0,>=1.4.0",
    "protobuf<6,>=5",
    "hypothesis>=6,<7",
    "ecdsa>=0.15",
    "pytest>=8,<10",
    "pytest-asyncio>=1.3,<2",
    # kv-store-specific runtime dep (the only actual import in packages/).
    "peewee>=3.17,<4",
    "pip>=24.0",
]

[project.urls]
Repository = "https://github.com/valory-xyz/kv-store"

[dependency-groups]
dev = [
    "setuptools>=78.1.1,<82",
    "tomte[cli, tests] @ git+https://github.com/valory-xyz/tomte.git@v0.7.0",
]

[tool.uv]
default-groups = "all"
prerelease = "allow"

[tool.tomte]
# kv-store has no third_party packages on disk and no non-PyPI upstreams
# beyond OA/open-aea, which tomte auto-derives from `[project].dependencies`.
upstream_pins = []
pytest_targets = ["packages/valory/connections/kv_store/tests"]
tomte_dep_pin = " @ git+https://github.com/valory-xyz/tomte.git@v0.7.0"

[tool.uv.build-backend]
module-name = ["packages"]
module-root = ""
namespace = true
